# 05_scraping_convocatorias

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_esquema_inicial.py  0002_apto_fundaciones_nuevas.py  0003_gestion_y_ambito.py  0004_gestion_en_seguimiento.py
backend/app/: __init__.py  config.py  constants.py  database.py
backend/app/ai/: __init__.py  client.py  errors.py  prompts.py  schemas.py
backend/app/api/: __init__.py  deps.py  main.py
backend/app/api/routers/: __init__.py  ai.py  convocatorias.py  fuentes.py  gestion.py  health.py  scraping.py  stats.py
backend/app/api/services/: __init__.py  ai.py  convocatorias.py  fuentes.py  gestion.py  stats.py
backend/app/connectors/: __init__.py  base.py  grantsgov.py  http.py  minciencias.py  mintic.py  pnud.py  secop.py  sicon.py  ungm.py  worldbank.py
backend/app/models/: __init__.py  convocatoria.py  ejecucion.py  fuente.py  gestion.py
backend/app/pipeline/: __init__.py  dedupe.py  normalizer.py  runner.py  upsert.py
backend/app/schemas/: __init__.py  convocatoria.py  ejecucion.py  fuente.py  gestion.py  raw.py  stats.py
backend/app/utils/: __init__.py  dates.py  text.py
backend/app/worker/: __init__.py  scheduler.py
backend/scripts/: seed_fuentes.py
backend/tests/: conftest.py
backend/tests/api/: test_ai.py  test_export_excel.py  test_gestion.py
backend/tests/connectors/: test_grantsgov.py  test_secop.py  test_sicon.py  test_worldbank.py
backend/tests/fixtures/grantsgov/: search2_community.json
backend/tests/fixtures/secop/: page1_tecnologia_2026.json
backend/tests/fixtures/sicon/: convocatorias_publicadas_page1.json
backend/tests/fixtures/worldbank/: procnotices_page1.json
backend/tests/pipeline/: test_normalizer_apto.py
backend/tests/utils/: test_html_to_text.py
docs/: MANUAL_USUARIO.md  ai-contract.md  api-contract.md
frontend/: index.html  nginx.conf
frontend/css/: app.css
frontend/js/: app.js
scripts/: smoke_e2e.sh
