[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "convocatorias"
version = "0.1.0"
description = "Sistema automatizado de búsqueda de convocatorias (API + worker)."
requires-python = ">=3.11"
dependencies = [
    # --- Web / API ---
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    # --- Datos / ORM ---
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    # --- Configuración / validación ---
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    # --- HTTP / scraping ---
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<9.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.1,<6.0",
    # --- Scheduler ---
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-httpx>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
