[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "convocatorias"
version = "0.1.0"
description = "Sistema automatizado de búsqueda de convocatorias (API + worker)."
requires-python = ">=3.11"
dependencies = [
    # --- Web / API ---
    # Fijado a la linea 0.115 (Starlette 0.4x). fastapi>=0.137 (Starlette 1.x)
    # tiene un bug de enrutado: al anidar routers (app.include_router(api_router)
    # con sub-includes) el ultimo sub-router incluido deja de servirse por ASGI
    # aunque openapi lo liste, y el schema queda desincronizado. Verificado en vivo.
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.29,<1.0",
    # --- Datos / ORM ---
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    # --- Configuración / validación ---
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    # --- HTTP / scraping ---
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<9.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.1,<6.0",
    # --- Scheduler ---
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-httpx>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
